<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceso">

    <ImageView
        android:id="@+id/backgroundLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.3" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/booklogo"
        android:transitionName="logoTrans"
        app:layout_constraintBottom_toTopOf="@id/h5"
        app:layout_constraintEnd_toStartOf="@id/v4"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toEndOf="@id/v3"
        app:layout_constraintTop_toBottomOf="@id/h4"
        app:layout_constraintVertical_bias="0.503"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/appNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_tiny"
        android:transitionName="bfuTrans"
        app:layout_constraintTop_toBottomOf="@id/h5"
        app:layout_constraintStart_toEndOf="@id/v3"
        app:layout_constraintEnd_toStartOf="@id/v4"
        style="@style/TinyAppNameStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:transitionName="emailTrans"
        app:layout_constraintTop_toBottomOf="@id/h8"
        app:layout_constraintBottom_toTopOf="@id/h9"
        app:layout_constraintStart_toEndOf="@id/v5"
        app:layout_constraintEnd_toStartOf="@id/v6"
        app:startIconDrawable="@drawable/ic_persona"
        android:textColorHint="@color/white"
        app:startIconTint="@color/white"
        app:layout_constraintWidth_percent="0.7"
        style="@style/ToLoginButton"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:fontFamily="@font/text"
            android:textColorHint="@color/white"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/h9"
        app:layout_constraintBottom_toTopOf="@id/h11"
        app:layout_constraintStart_toEndOf="@id/v5"
        app:layout_constraintEnd_toStartOf="@id/v6"
        android:transitionName="userTrans"
        app:startIconDrawable="@drawable/ic_key"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintWidth_percent="0.7"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        style="@style/ToLoginButton"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:fontFamily="@font/text"
            android:textSize="30sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:transitionName="accTrans"
        app:layout_constraintStart_toEndOf="@id/v5"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintTop_toBottomOf="@id/h7"
        app:layout_constraintWidth_percent="0.3"
        style="@style/BothButtons"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:transitionName="loginTrans"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintEnd_toStartOf="@id/v6"
        app:layout_constraintTop_toBottomOf="@id/h7"
        app:layout_constraintWidth_percent="0.35"
        style="@style/BothButtons"/>

    <TextView
        android:id="@+id/authorLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_license"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/v3"
        app:layout_constraintEnd_toStartOf="@id/v4"
        app:layout_constraintTop_toBottomOf="@id/h6"
        style="@style/AuthorLicense"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.605" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.699" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.722" />


</androidx.constraintlayout.widget.ConstraintLayout>